--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,129 @@
-.App {
+.logo{
+  width:8.5%;
+  left: 12%;
+  position:absolute
+}
+
+.buttons{
+  float:right;
+  margin-right: 12%
+}
+
+.icon{
+  width:5%;
+  height:auto
+}
+
+.home-page-header{
+  margin-top:2%;
+}
+
+.home-page-icon{
+  width:70%;
+  margin-left:15%;
+  margin-right: 15%;
+  margin-top: 2%
+}
+
+.home-page-header{
+  text-align:center;
+  font-weight: bold;
+  font-size: 25px;
+}
+
+.home-page-header2{
+  text-align:center;
+  font-weight: bold;
+  font-size: 25px;
+  color: #068238;
+  margin-top:1%;
+  margin-bottom: 1%;
+}
+
+.home-page-text{
   text-align: center;
+  font-size: 15px;
+  width:65%;
+  margin-left:17.5%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.home-page-boxes-holder{
+  width:65%;
+  height:auto;
+ margin-left:17.5%;
+ margin-right:17.5%;
+ margin-top:2%;
+
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.home-page-boxes{
+  border: 1px;
+  border-color:gray;
+  border-style:solid;
+  width:40%;
+  margin-left:5%;
+  margin-right:5%;
+  padding-top:2%;
+  padding-bottom:2%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.home-page-boxes-title{
+  color: #068238;
+  text-align: center;
+  font-size: 25px;
+  text-decoration: underline;
+  font-weight: bold;
+}
+
+.home-page-boxes-text{
+  margin-top:5%;
+  text-align: center;
+  font-size: 15px;
+  margin-left:1%;
+  margin-right:1%
+}
+
+.home-page-boxes-button{
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-top:5%;
 }
 
-.App-link {
-  color: #61dafb;
+.line-break{
+  margin-top: 3%;
+  margin-bottom: 3%;
+  width:80%
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.home-page-sponsor-icon{
+  width:40%;
+  margin-left:30%;
+  margin-right: 30%;
+  margin-top: 2%;
+  border: 1px;
+  border-style:solid;
+  border-color:#068238
+}
+
+.sponsor-text{
+  text-align:center;
+  font-weight: bold;
+  font-size: 25px;
+}
+
+.sponsor-link{
+  color: #0096FF;
+  display: flex;
+  justify-content: center;
+  text-decoration: none;
+}
+
+.footer{
+  background-color: #F47D4D;
+  width:80%;
+  margin-left:10%;
+  margin-right:10%;
+  text-align: center;
+  padding-top:1%;
+  padding-bottom:1%
 }
