--- a/src/App.css
+++ b/src/App.css
@@ -53,7 +53,25 @@
  margin-left:17.5%;
  margin-right:17.5%;
  margin-top:2%;
+}
 
+.etraining-page-boxes-holder{
+  width:65%;
+  height:auto;
+ margin-left:17.5%;
+ margin-right:17.5%;
+ margin-top:2%;
+ background-color:#40A26E;
+}
+
+.etraining-page-modules-holder{
+  width:65%;
+  height:auto;
+ margin-left:17.5%;
+ margin-right:17.5%;
+ margin-top:2%;
+ background-color:#C0E0CF;
+ margin-bottom:5%
 }
 
 .home-page-boxes{
@@ -67,12 +85,69 @@
   padding-bottom:2%;
 }
 
+.etraining-page-boxes{
+  border: 1px;
+  border-color:gray;
+  border-style:solid;
+  margin-bottom:5%;
+  margin-left:5%;
+  margin-right:5%;
+  width:75%;
+  padding-top:2%;
+  padding-bottom:2%;
+  background-color: white;
+}
+
 .home-page-boxes-title{
   color: #068238;
   text-align: center;
   font-size: 25px;
   text-decoration: underline;
   font-weight: bold;
+}
+
+.etraining-page-boxes-title{
+  color: #068238;
+  font-size: 20px;
+  margin-left:5%;
+  font-weight: bold;
+}
+
+.etraining-page-module-title{
+  color: black;
+  font-size: 20px;
+  margin-left:5%;
+  font-weight: bold;
+}
+
+.etraining-page-boxes-top-title{
+  margin-top:5%;
+  margin-bottom:2%;
+  background-color: #40A26E;
+  color:white;
+  font-size: 20px;
+  margin-left:5%;
+  font-weight: bold;
+}
+
+.etraining-module-box{
+  width:100%;
+}
+.etraining-page-modules-top-title{
+  margin-top:5%;
+  margin-bottom:2%;
+  background-color: #C0E0CF;
+  color:black;
+  font-size: 20px;
+  margin-left:5%;
+  font-weight: bold;
+}
+
+.etrainingIcon{
+  width:550px;
+  height:250px;
+  justify-content: center;
+  display: flex;
 }
 
 .home-page-boxes-text{
@@ -93,6 +168,14 @@
   margin-top: 3%;
   margin-bottom: 3%;
   width:80%
+}
+
+.line-break2{
+  margin-top: 3%;
+  margin-bottom: 3%;
+  width:80%;
+  border-color:white;
+  border-style:none
 }
 
 .home-page-sponsor-icon{
@@ -126,4 +209,13 @@
   text-align: center;
   padding-top:1%;
   padding-bottom:1%
+}
+
+.etraining-header{
+  text-align:center;
+  font-weight: bold;
+  font-size: 25px;
+  color: #068238;
+  margin-top:1%;
+  margin-bottom: 1%;
 }
