--- a/src/App.css
+++ b/src/App.css
@@ -64,6 +64,22 @@
  background-color:#40A26E;
 }
 
+
+.module-page-title{
+  width:65%;
+  height:auto;
+ margin-left:17.5%;
+ margin-right:17.5%;
+ margin-top:2%;
+ background-color:#40A26E;
+ color:white;
+ font-size: 25px;
+ font-weight: bold;
+ text-align: center;
+ padding-top:5%;
+ padding-bottom:5%
+}
+
 .etraining-page-modules-holder{
   width:65%;
   height:auto;
@@ -72,6 +88,33 @@
  margin-top:2%;
  background-color:#C0E0CF;
  margin-bottom:5%
+}
+
+.module-page-modules-holder{
+  width:65%;
+  height:auto;
+ margin-left:17.5%;
+ margin-right:17.5%;
+ margin-top:2%;
+ background-color:#C0E0CF;
+ margin-bottom:5%;
+ padding-bottom:2%
+}
+
+.module-button{
+  justify-content: center;
+  display: flex;
+  margin-bottom: 5%;
+}
+.module-text{
+  width:65%;
+  height:auto;
+ margin-left:17.5%;
+ margin-right:17.5%;
+ margin-top:2%;
+ background-color:white;
+ margin-bottom:5%;
+ padding-bottom:2%
 }
 
 .home-page-boxes{
@@ -93,6 +136,19 @@
   margin-left:5%;
   margin-right:5%;
   width:75%;
+  padding-top:2%;
+  padding-bottom:2%;
+  background-color: white;
+}
+
+.module-page-boxes{
+  border: 1px;
+  border-color:gray;
+  border-style:solid;
+  margin-bottom:5%;
+  margin-left:5%;
+  margin-right:5%;
+  width:90%;
   padding-top:2%;
   padding-bottom:2%;
   background-color: white;
@@ -120,6 +176,14 @@
   font-weight: bold;
 }
 
+.module-page-module-title{
+  color: black;
+  font-size: 20px;
+  margin-left:5%;
+  font-weight: bold;
+  width:100%;
+}
+
 .etraining-page-boxes-top-title{
   margin-top:5%;
   margin-bottom:2%;
@@ -128,6 +192,16 @@
   font-size: 20px;
   margin-left:5%;
   font-weight: bold;
+}
+
+.module-subtitle{
+  margin-top:5%;
+  margin-bottom:2%;
+  font-size: 20px;
+  margin-left:5%;
+  font-weight: bold;
+  padding-top:2%;
+  padding-bottom:2%
 }
 
 .etraining-module-box{
@@ -158,10 +232,26 @@
   margin-right:1%
 }
 
+.module-time{
+  margin-top:5%;
+  text-align: center;
+  font-size: 15px;
+  margin-left:1%;
+  margin-right:1%;
+  color:#068238
+}
+
 .home-page-boxes-button{
   display: flex;
   justify-content: center;
   margin-top:5%;
+}
+
+
+.module-page-boxes-button{
+  float:right;
+  margin-top:5%;
+  width:30%
 }
 
 .line-break{
@@ -199,6 +289,14 @@
   display: flex;
   justify-content: center;
   text-decoration: none;
+}
+
+.module-title{
+  color:white;
+  font-size: 25px;
+  font-weight: bold;
+  margin-left:2%;
+  padding-top:2%
 }
 
 .footer{
